--- a/views/index.erb
+++ b/views/index.erb
@@ -1,26 +1,31 @@
-<h1> "Welcome to MakersBnB" </h1>
+<% if @user.nil?%>
+  <h1> "Welcome to MakersBnB" </h1>
 
-<h3> Sign Up </h3>
+  <h3> Sign Up </h3>
 
-<form action="/sign-up" method="post">
-  <label for="name">
-  Name
-  <input type="text" name="name">
-  </label>
-  <br>
-  <label for="email">
-  Email
-  <input type="text" name="email">
-  </label>
-  <br>
-  <label for="username">
-  Username
-  <input type="text" name="username">
-  </label>
-  <br>
-  <label for="password">
-  Password
-  <input type="password" name="password">
-  <br>
-  <input type="submit" value="Sign up">
-</form>
+  <form action="/sign-up" method="post">
+    <label for="name">
+    Name
+    <input type="text" name="name">
+    </label>
+    <br>
+    <label for="email">
+    Email
+    <input type="text" name="email">
+    </label>
+    <br>
+    <label for="username">
+    Username
+    <input type="text" name="username">
+    </label>
+    <br>
+    <label for="password">
+    Password
+    <input type="password" name="password">
+    <br>
+    <input type="submit" value="Sign up">
+  </form>
+<% else %>
+  <h1>Welcome, <%=@user.name%></h1>
+
+<% end %>
