Adding listings to home page erb and app.rb

--- a/views/index.erb
+++ b/views/index.erb
@@ -38,4 +38,20 @@
   <input type = "submit" value = "Log out" >
   </form>
 
+  <br>
+
+  <ul>
+  <% @listing.each do |listing| %>
+    <li>
+        <%= listing.name %>
+        <!-- listing.tag -->
+        <%= listing.price %>
+        <br>
+        <form method="get" action="/lisitings/<%= listings.id %>">
+          <input type="submit" value="View Listing">
+        </form>
+    </li>
+  <% end %>
+  </ul>
+
 <% end %>
