created feature test for listing spaces page ; created new-space page; connected it to the controller; created spaces table in the database

--- a/views/index.erb
+++ b/views/index.erb
@@ -37,5 +37,8 @@
   <form action = "/log-out" method = 'post'>
   <input type = "submit" value = "Log out" >
   </form>
+  <form action = "/new-space" method = 'get'>
+  <input type = "submit" value = "List a Space" >
+  </form>
 
 <% end %>
