--- a/views/listing.erb
+++ b/views/listing.erb
@@ -1,14 +1,13 @@
-<h3><%=flash[:notice]%></h3>
-      <%= @listing.name %>
+      <h3> <%= @space.name %> </h3>
       <!-- IMAGE OF LISTING -->
-      <%= @listing.description %>
-      <%= @listing.price %>
+      <%= @space.description %>
+      <%= @space.price %>
       <br>
-      <!-- Available From: ONCE FUNCTION ADDED
-      listing.start_date ONCE FUNCTION ADDED
+      Available From:
+      @space.start_date
       to
-      listing.end_date ONCE FUNCTION ADDED -->
-      <form method="post" action="/booking/<%=@listing.id%> ">
+      @space.end_date
+      <br>
+      <form method="post" action="/booking/<%=@space.id%> ">
         <input type="submit" value="Request to book">
-<     /form>
-<% end %>
+      </form>
