correcting the spelling of listing

--- a/views/index.erb
+++ b/views/index.erb
@@ -47,7 +47,7 @@
         <!-- @space.tag -->
         <%= @space.price %>
         <br>
-        <form method="get" action="/lisiting/<%=@space.id %>">
+        <form method="get" action="/listing/<%=@space.id %>">
           <input type="submit" value="View Listing">
         </form>
     </li>
