--- a/views/index.erb
+++ b/views/index.erb
@@ -34,6 +34,7 @@
   </form>
 <% else %>
   <h1>Welcome, <%=@user.name%></h1>
+  <h3><%=flash[:notice]%></h3>
   <form action = "/log-out" method = 'post'>
   <input type = "submit" value = "Log out" >
   </form>
