added the owner can view their spaces functionality and passing the test

--- a/views/index.erb
+++ b/views/index.erb
@@ -38,6 +38,9 @@
   <form action = "/log-out" method = 'post'>
   <input type = "submit" value = "Log out" >
   </form>
+  <form action = "/my-spaces">
+  <input type = "submit" value = "View my spaces" >
+  </form>
   <form action = "/new-space" method = 'get'>
   <input type = "submit" value = "List a Space" >
   </form>
