--- a/views/my_spaces.erb
+++ b/views/my_spaces.erb
@@ -9,6 +9,9 @@
         <form action="/edit-space/<%= space.id %>">
           <input type="submit" value="Edit">
         </form>
+        <form action="/delete-space/<%= space.id %>" method='post'>
+          <input type="submit" value="Delete" onclick="return confirm('Are you sure you want to delete this item?');">
+        </form>
     </li>
   <% end %>
   </ul>
