added flash notices to confirm the user they have edited or delted a space

--- a/views/my_spaces.erb
+++ b/views/my_spaces.erb
@@ -1,4 +1,5 @@
 <h3> Here is a list of <%= @user.name %>'s spaces: </h3>
+<h3><%=flash[:notice]%></h3>
 <ul>
   <% @space.each do |space| %>
     <li>
