Added requests page where user can see the requests they've made and requests other users have made on their property

--- a/views/index.erb
+++ b/views/index.erb
@@ -36,12 +36,14 @@
   <h1>Welcome, <%=@user.name%></h1>
   <h3><%=flash[:notice]%></h3>
   <form action = "/log-out" method = 'post'>
-  <input type = "submit" value = "Log out" >
+    <input type = "submit" value = "Log out" >
   </form>
   <form action = "/new-space" method = 'get'>
-  <input type = "submit" value = "List a Space" >
+    <input type = "submit" value = "List a Space" >
   </form>
-
+  <form action = "/requests" method = 'get'>
+    <input type = "submit" value = "Requests" >
+  </form>
   <br>
 
   <ul>
