undoing changes as on main

--- a/views/edit_space.erb
+++ b/views/edit_space.erb
@@ -1,9 +1,9 @@
 
 <h1> Edit your Space</h1>
 
-<label for='Name'>Name:</label>
+<label for='spaceName'>Name:</label>
     <br>
-    <input type='text' id='Name'> %>
+    <input type='text' id='space_Name'> %>
     <br>
     <br>
     Price:
