--- a/views/list_space.erb
+++ b/views/list_space.erb
@@ -1,5 +1,7 @@
 <h1> List a Space</h1>
 
+<h3><%=flash[:notice]%></h3>
+
 <form action="/listing-space" method="post">
     <label for="name">
     Name:
