--- a/views/edit_space.erb
+++ b/views/edit_space.erb
@@ -19,11 +19,18 @@
     <br>
     <label for="availability_from">
     Availability from
-    <input type="availability_from" name="availability_from" value="<%= @space.availability_from %>" >
+    <br>
+    <input type="date" id="availability_from" name="availability_from"
+          value="<%=@current_start_date%>"
+          min="<%=@today%>" max="2022-12-31">
+    <br>
     <br>
     <label for="availability_to">
     Availability to
-    <input type="availability_to" name="availability_to" value="<%= @space.availability_to %>" >
+    <br>
+    <input type="date" id="availability_to" name="availability_to"
+          value="<%=@current_end_date%>"
+          min="<%=@tomorrow%>" max="2022-12-31">
     <br>
     <input type="submit" value="Save">
   </form>
