added error message to edit space page when end date before start date
Co-authored-by: ChrisPinna <ChrisPinna@no-reply.github.com>

--- a/views/edit_space.erb
+++ b/views/edit_space.erb
@@ -1,6 +1,8 @@
 
 <h1> Edit your Space</h1>
 
+<h3><%=flash[:notice]%></h3>
+
 <form action="/edit-space/<%= @space.id %>" method="post">
     <label for="name">
     Name
