added calendar to booking page enabled booking from params calendar will only display available dates booking calendar does not currently take into account previous booking; this needs to be fixed
Co-authored-by: jam9304 <jam9304@no-reply.github.com>

--- a/views/listing.erb
+++ b/views/listing.erb
@@ -9,17 +9,14 @@
       <br>
       £<%= @space.price %>
       <br>
-      <br>
-      Available From:
-      <br>
-      <%= @space.availability_from.split("-").reverse.join("-") %>
-      <br>
-      <br>
-      Until:
-      <br>
-      <%= @space.availability_to.split("-").reverse.join("-") %>
-      <br>
-      <br>
       <form action="/booking/<%=@space.id%>" method="post">
+        <br>
+        Night to book:
+        <br>
+        <input type="date" id="booked_from" name="booked_from"
+         value="<%=@start_date%>"
+         min="<%=@start_date%>" max="<%=@end_date%>">
+        <br>
+        <br>
         <input type="submit" value="Request to book">
       </form>
