--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,6 @@
   <form action="/login" method="get">
     <input type = "submit" value = "Login">
   </form>
-
   <br>
 
   <h3> Sign Up </h3>
@@ -37,6 +36,9 @@
   <h3><%=flash[:notice]%></h3>
   <form action = "/log-out" method = 'post'>
     <input type = "submit" value = "Log out" >
+  </form>
+  <form action="/settings" method="get">
+    <input type = "submit" value = "Settings">
   </form>
   <form action = "/my-spaces">
   <input type = "submit" value = "View my spaces" >
