removed ability to book the same space on the same day and error message if the user attempts to.

--- a/views/listing.erb
+++ b/views/listing.erb
@@ -1,5 +1,5 @@
       <h3> <%= @space.space_name %> </h3>
-      <!-- IMAGE OF LISTING -->
+      <h4> <%= flash[:notice] %> </h4>
       Property description:
       <br>
       <%= @space.description %>
