--- a/views/listing.erb
+++ b/views/listing.erb
@@ -1,25 +1,72 @@
-      <h3> <%= @space.space_name %> </h3>
+      <head>
+  <title></title>
+  <link href="<%= url('/styles.css') %>" rel="stylesheet" type="text/css" />
+</head>
+
+<header>
+  <img class ="logo" src="https://drive.google.com/uc?export=view&id=1UrxSj1DB0vrV_EgV_uVTbRARDo8HuA0g" alt="logo" width="70" height="57">
+
+<nav>
+
+<ul class = "nav__links">
+
+<li>  
+  <form action = "/log-out" method = 'post'>
+  <input id = "button" type = "submit" value = "Log out" >
+  </form>
+</li>
+<li>
+  <form action="/about" method="get">
+  <input id= 'button' type = "submit" value = "About">
+  </form>
+</li>
+<li>
+  <div class="dropdown">
+  <button class="dropbtn">My spaces</button>
+  <div class="dropdown-content">
+  <form action = "/my-spaces">
+  <input type = "submit" value = "View my spaces" >
+  </form>
+  <form action = "/new-space" method = 'get'>
+    <input type = "submit" value = "List a Space" >
+  </form>
+  <form action = "/requests" method = 'get'>
+    <input type = "submit" value = "Requests" >
+  </form>
+  </div>
+</div>
+</li>
+
+</ul>
+
+</nav>
+
+</header>
+      <h2 id= "listing" > <%= @space.space_name %> </h2>
       <!-- IMAGE OF LISTING -->
-      Property description:
+      <div id= "window">
+      <p>Property description:</p>
       <br>
       <%= @space.description %>
       <br>
       <br>
-      Price:
+      <p>Price:</p>
       <br>
       £<%= @space.price %>
       <br>
       <br>
-      Available From:
+      <p>Available From:</p>
       <br>
       <%= @space.availability_from.split("-").reverse.join("-") %>
       <br>
       <br>
-      Until:
+      <p>Until:</p>
       <br>
       <%= @space.availability_to.split("-").reverse.join("-") %>
       <br>
       <br>
+      </div>
+
       <form action="/booking/<%=@space.id%>" method="post">
-        <input type="submit" value="Request to book">
+        <input id = "RTB" type="submit" value="Request to book">
       </form>
