--- a/views/index.erb
+++ b/views/index.erb
@@ -1,43 +1,92 @@
+
+<%# When user is NOT logged in  %>
 <% if @user.nil?%>
-  <h1> Welcome to MakersBnB </h1>
+  
+
+<head>
+  <title></title>
+  <link href="<%= url('/styles.css') %>" rel="stylesheet" type="text/css" />
+</head>
+
+<header>
+  <img class ="logo" src="https://drive.google.com/uc?export=view&id=1UrxSj1DB0vrV_EgV_uVTbRARDo8HuA0g" alt="logo" width="70" height="57">
+
+<nav>
+
+<ul class = "nav__links">
+
+<li><form action="/login" method="get">
+  <input id= 'button' type = "submit" value = "About">
+</form></li><li><form action="/login" method="get">
+  <input id= 'button' type = "submit" value = "Login">
+</form></li>
+</ul>
+
+</nav>
+
+</header>
+<h1 id= "welcome" > Welcome to MakersBnB </h1>
+
   <h3><%=flash[:notice]%></h3>
-
-  <form action="/login" method="get">
-    <input type = "submit" value = "Login">
-  </form>
-
   <br>
 
   <h3> Sign Up </h3>
-
+<div id ="window">
   <form action="/sign-up" method="post">
     <label for="name">
-    Name
+    <p>Name:</p>
+    <br>
     <input type="text" name="name">
     </label>
     <br>
     <label for="email">
-    Email
+    <p>Email:</p>
+    <br>
     <input type="text" name="email">
     </label>
     <br>
     <label for="username">
-    Username
+    <p>Username:</p>
+    <br>
     <input type="text" name="username">
     </label>
     <br>
     <label for="password">
-    Password
+    <p>Password:</p>
+    <br>
     <input type="password" name="password">
     <br>
-    <input type="submit" value="Sign up">
+    <input id= button type="submit" value="Sign up">
   </form>
+  </div>
+  <%# If user is logged in %>
 <% else %>
-  <h1>Welcome, <%=@user.name%></h1>
-  <h3><%=flash[:notice]%></h3>
+<head>
+  <title></title>
+  <link href="<%= url('/styles.css') %>" rel="stylesheet" type="text/css" />
+</head>
+
+<header>
+  <img class ="logo" src="https://drive.google.com/uc?export=view&id=1UrxSj1DB0vrV_EgV_uVTbRARDo8HuA0g" alt="logo" width="70" height="57">
+
+<nav>
+
+<ul class = "nav__links">
+
+<li>  
   <form action = "/log-out" method = 'post'>
-    <input type = "submit" value = "Log out" >
+  <input id = "button" type = "submit" value = "Log out" >
   </form>
+</li>
+<li>
+  <form action="/about" method="get">
+  <input id= 'button' type = "submit" value = "About">
+  </form>
+</li>
+<li>
+  <div class="dropdown">
+  <button class="dropbtn">My spaces</button>
+  <div class="dropdown-content">
   <form action = "/my-spaces">
   <input type = "submit" value = "View my spaces" >
   </form>
@@ -47,8 +96,20 @@
   <form action = "/requests" method = 'get'>
     <input type = "submit" value = "Requests" >
   </form>
-  <br>
+  </div>
+</div>
+</li>
 
+</ul>
+
+</nav>
+
+</header>
+
+  <h1>Welcome, <%=@user.name%></h1>
+  <h3><%=flash[:notice]%></h3>
+  
+<div id= "window">
   <ul>
   <% @space.each do |space| %>
     <li>
@@ -62,5 +123,8 @@
     </li>
   <% end %>
   </ul>
+  </div>
+  
 
 <% end %>
+
