--- a/views/my_spaces.erb
+++ b/views/my_spaces.erb
@@ -1,5 +1,51 @@
-<h3> Here is a list of <%= @user.name %>'s spaces: </h3>
+<head>
+  <title></title>
+  <link href="<%= url('/styles.css') %>" rel="stylesheet" type="text/css" />
+</head>
+
+<header>
+  <img class ="logo" src="https://drive.google.com/uc?export=view&id=1UrxSj1DB0vrV_EgV_uVTbRARDo8HuA0g" alt="logo" width="70" height="57">
+
+<nav>
+
+<ul class = "nav__links">
+
+<li>  
+  <form action = "/log-out" method = 'post'>
+  <input id = "button" type = "submit" value = "Log out" >
+  </form>
+</li>
+<li>
+  <form action="/about" method="get">
+  <input id= 'button' type = "submit" value = "About">
+  </form>
+</li>
+<li>
+  <div class="dropdown">
+  <button class="dropbtn">My spaces</button>
+  <div class="dropdown-content">
+  <form action = "/my-spaces">
+  <input type = "submit" value = "View my spaces" >
+  </form>
+  <form action = "/new-space" method = 'get'>
+    <input type = "submit" value = "List a Space" >
+  </form>
+  <form action = "/requests" method = 'get'>
+    <input type = "submit" value = "Requests" >
+  </form>
+  </div>
+</div>
+</li>
+
+</ul>
+
+</nav>
+
+</header>
+
+<h1> Here is a list of <%= @user.name %>'s spaces: </h1>
 <h3><%=flash[:notice]%></h3>
+<div id ="window">
 <ul>
   <% @space.each do |space| %>
     <li>
@@ -16,3 +62,4 @@
     </li>
   <% end %>
   </ul>
+  </div>
