--- a/views/requests.erb
+++ b/views/requests.erb
@@ -1,5 +1,50 @@
-<h1> MakersBnB: <small>Requests</small></h1>
+<head>
+  <title></title>
+  <link href="<%= url('/styles.css') %>" rel="stylesheet" type="text/css" />
+</head>
 
+<header>
+  <img class ="logo" src="https://drive.google.com/uc?export=view&id=1UrxSj1DB0vrV_EgV_uVTbRARDo8HuA0g" alt="logo" width="70" height="57">
+
+<nav>
+
+<ul class = "nav__links">
+
+<li>  
+  <form action = "/log-out" method = 'post'>
+  <input id = "button" type = "submit" value = "Log out" >
+  </form>
+</li>
+<li>
+  <form action="/about" method="get">
+  <input id= 'button' type = "submit" value = "About">
+  </form>
+</li>
+<li>
+  <div class="dropdown">
+  <button class="dropbtn">My spaces</button>
+  <div class="dropdown-content">
+  <form action = "/my-spaces">
+  <input type = "submit" value = "View my spaces" >
+  </form>
+  <form action = "/new-space" method = 'get'>
+    <input type = "submit" value = "List a Space" >
+  </form>
+  <form action = "/requests" method = 'get'>
+    <input type = "submit" value = "Requests" >
+  </form>
+  </div>
+</div>
+</li>
+
+</ul>
+
+</nav>
+
+</header>
+<h1> MakersBnB: <small>Requests</small></h1>
+<div id ="R">
+<div id= "RM">
 <h3> Requests Made </h3>
 <% @user_bookings.order(created_at: :desc).each do |booking| %>
   <a href="/listing/<%=booking.space_id %>">
@@ -7,24 +52,26 @@
   </a>
   <br>
   <% if booking.accepted == nil %>
-     Status Pending
+     <p>Status Pending</p>
   <% elsif booking.accepted == true %>
-    Status Approved
+    <p>Status Approved</p>
   <% else %>
-    Status Denied
+    <p>Status Denied</p>
   <% end %>
   <br>
-  Booking request sent at: <%= booking.created_at.strftime("%d/%m/%Y %k:%M") %>
+  <p>Booking request sent at:</p> <%= booking.created_at.strftime("%d/%m/%Y %k:%M") %>
   <br>
   <br>
 <% end %>
+</div>
+<div id= "RR">
 <h3> Requests Received </h3>
 <% @user_requests.order(created_at: :asc).each do |booking| %>
   <a href="/listing/<%=booking.space_id %>">
     <%= Space.find_by_id(booking.space_id).space_name %>
   </a>
   <br>
-    Requested by <%= User.find_by_id(booking.user_id).username %>
+    <p>Requested by</p> <%= User.find_by_id(booking.user_id).username %>
     at: <%= booking.created_at.strftime("%d/%m/%Y %k:%M") %>
   <% if booking.accepted == nil %>
   <form action="/accept-or-reject/<%= booking.id %>" method="post">
@@ -39,3 +86,5 @@
   <br>
   <br>
 <% end %>
+</div>
+</div>
