added owner on the main listing pag

--- a/views/index.erb
+++ b/views/index.erb
@@ -116,7 +116,7 @@
   <ul>
   <% @space.each do |space| %>
     <li>
-        <%= space.space_name %>
+        <%= space.space_name %> - listed by <%= User.find_by_id(space.user_id).username %>  
         <!-- space.tag -->
         £<%= space.price %>
         <br>
