--- a/views/list_space.erb
+++ b/views/list_space.erb
@@ -10,10 +10,23 @@
 
 <ul class = "nav__links">
 
-<li>  
-  <form action = "/log-out" method = 'post'>
-  <input id = "button" type = "submit" value = "Log out" >
+
+
+<li>
+  <div class="dropdown">
+  <button id= 'button' class="dropbtn">My spaces</button>
+  <div class="dropdown-content">
+  
+  <form action = "/my-spaces">
+  <input id= 'button' type = "submit" value = "View my spaces" >
   </form>
+  
+  
+  <form action = "/requests" method = 'get'>
+    <input id= 'button' type = "submit" value = "Requests" >
+  </form>
+  </div>
+</div>
 </li>
 <li>
   <form action="/about" method="get">
@@ -21,24 +34,16 @@
   </form>
 </li>
 <li>
-  <div class="dropdown">
-  <button class="dropbtn">My spaces</button>
-  <div class="dropdown-content">
-  <form action = "/my-spaces">
-  <input type = "submit" value = "View my spaces" >
+<form action="/settings" method="get">
+    <input id= 'button'  type = "submit" value = "Settings">
   </form>
-  <form action = "/new-space" method = 'get'>
-    <input type = "submit" value = "List a Space" >
-  </form>
-  <form action = "/requests" method = 'get'>
-    <input type = "submit" value = "Requests" >
-  </form>
-  </div>
-</div>
 </li>
-
+<li>  
+  <form action = "/log-out" method = 'post'>
+  <input id = "button" type = "submit" value = "Log out" >
+  </form>
+</li>
 </ul>
-
 </nav>
 
 </header>
