--- a/views/login.erb
+++ b/views/login.erb
@@ -4,17 +4,23 @@
 </head>
 
 <header>
-  <img class ="logo" src="https://drive.google.com/uc?export=view&id=1UrxSj1DB0vrV_EgV_uVTbRARDo8HuA0g" alt="logo" width="70" height="57">
+  <a href = "/" class ="logo"> <img src="https://drive.google.com/uc?export=view&id=1UrxSj1DB0vrV_EgV_uVTbRARDo8HuA0g" alt="logo" width="70" height="57"></a>
 
 <nav>
 
 <ul class = "nav__links">
 
-<li><form action="/about" method="get">
-  <input id= 'button' type = "submit" value = "About">
-</form></li><li><form action="/" method="get">
+
+<li>
+<form action="/" method="get">
   <input id= 'button' type = "submit" value = "Sign-up">
-</form></li>
+</form>
+</li>
+<li>
+<form action="/about" method="get">
+  <input id= 'button' type = "submit" value = "About">
+</form>
+</li>
 </ul>
 
 </nav>
