--- a/views/my_spaces.erb
+++ b/views/my_spaces.erb
@@ -4,34 +4,31 @@
 </head>
 
 <header>
-  <img class ="logo" src="https://drive.google.com/uc?export=view&id=1UrxSj1DB0vrV_EgV_uVTbRARDo8HuA0g" alt="logo" width="70" height="57">
+  <a href = "/" class ="logo"> <img src="https://drive.google.com/uc?export=view&id=1UrxSj1DB0vrV_EgV_uVTbRARDo8HuA0g" alt="logo" width="70" height="57"></a>
 
 <nav>
 
 <ul class = "nav__links">
 
-<li>  
-  <form action = "/log-out" method = 'post'>
-  <input id = "button" type = "submit" value = "Log out" >
-  </form>
-</li>
+
 <li>
   <form action="/about" method="get">
   <input id= 'button' type = "submit" value = "About">
   </form>
 </li>
+
 <li>
   <div class="dropdown">
-  <button class="dropbtn">My spaces</button>
+  <button id= 'button' class="dropbtn">My spaces</button>
   <div class="dropdown-content">
   <form action = "/my-spaces">
-  <input type = "submit" value = "View my spaces" >
+  <input id= 'button' type = "submit" value = "View my spaces" >
   </form>
   <form action = "/new-space" method = 'get'>
-    <input type = "submit" value = "List a Space" >
+    <input id= 'button' type = "submit" value = "List a Space" >
   </form>
   <form action = "/requests" method = 'get'>
-    <input type = "submit" value = "Requests" >
+    <input id= 'button' type = "submit" value = "Requests" >
   </form>
   </div>
 </div>
@@ -46,9 +43,7 @@
 <h1> Here is a list of <%= @user.name %>'s spaces: </h1>
 <h3><%=flash[:notice]%></h3>
 <div id ="window">
-<ul>
   <% @space.each do |space| %>
-    <li>
         <%= space.space_name %>
         <!-- space.tag -->
         £<%= space.price %>
@@ -59,7 +54,5 @@
         <form action="/delete-space/<%= space.id %>" method='post'>
           <input type="submit" value="Delete" onclick="return confirm('Are you sure you want to delete this item?');">
         </form>
-    </li>
   <% end %>
-  </ul>
   </div>
