--- a/public/styles.css
+++ b/public/styles.css
@@ -9,8 +9,10 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(255, 255, 255); */
   font-size: x-large;
+  font-family: 'Roboto', sans-serif;
+  color: rgb(71, 71, 71);
 }
 
 header {
@@ -23,6 +25,7 @@ header {
 .logo {
   cursor: pointer;
   margin-right: auto;
+  border-radius: 25px;
 }
 
 .nav__links {
@@ -50,6 +53,7 @@ border: none;
 border-radius: 50px;
 cursor: pointer;
 transition: all 0.3 ease 0s;
+background-color: white;
 }
 
 button:hover {
@@ -62,7 +66,7 @@ background-color: white;
 }
 
 #window {
-  border: 5px solid black;
+  border: 5px solid rgb(228, 228, 228);
   width: 300px;
   height: auto;
   justify-content: center;
@@ -96,9 +100,9 @@ background-color: white;
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: white;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0);
     z-index: 1;
   }
   
@@ -109,7 +113,7 @@ background-color: white;
     display: block;
   }
   
-  .dropdown-content a:hover {background-color: #f1f1f1}
+  .dropdown-content a:hover {background-color: white}
   
   .dropdown:hover .dropdown-content {
     display: block;
@@ -121,20 +125,28 @@ background-color: white;
 
   #RM {
   float: left;    
-  border: 5px solid black;
   margin: auto;
+  border: 2px solid rgb(228, 228, 228);
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 15px;
 
   
   }
   #RR {
     float: left;
-    border: 5px solid black;
     margin: auto;
     margin-left: 20px;
+
+    border: 2px solid rgb(228, 228, 228);
+  border-radius: 5px;
+  padding: 10px;
+  
+ 
   }
 
   #R {
-    width: 700px;
+    width: 800px;
     height: auto;
     justify-content: baseline;
     margin: auto;
@@ -143,4 +155,29 @@ background-color: white;
     }
 p {
 font-size: large;
+}
+
+#gif {
+  background-image:url(https://drive.google.com/uc?export=view&id=1MhvFtC9AnTlNFlx-KsFaARtuQLgqIf9d);
+  display: flex;
+  justify-content: center;
+}
+
+#listing {
+  border: 2px solid rgb(228, 228, 228);
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+
+}
+
+#list1 {
+  border: 5px solid white;
+  width: 300px;
+  height: auto;
+  justify-content: center;
+  margin: auto;
+  padding: 10px;
+  margin-top: 10px;
 }
